[tool.poetry]
name = "vaex"
version = "4.17.1"
description = "high performance Python library for lazy Out-of-Core DataFrames"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.10.13"
sphinx-book-theme = "^1.1.2"
sphinx-sitemap = "^2.5.1"
sphinxcontrib-googleanalytics = "^0.4"
sphinxext-rediraffe = "^0.2.7"
future = "^1.0.0"
pyyaml = "^6.0.1"
astropy = "^6.0.0"
psutil = ">=1.1.2"
numpy = ">1.13"
aplus = "^0.11.0"
tornado = ">=5.0"
futures = "2.2.0"
cachetools = "^5.3.3"
progressbar2 = "^4.4.1"
jupyter = "^1.0.0"
nbconvert = ">=5.1.1"
nbsphinx = ">=0.1.2"
pip = ">=10.0"
annoy = "^1.17.3"
lightgbm = "^4.3.0"
xgboost = "^2.0.3"
sphinx-gallery = "^0.15.0"
catboost = "^1.2.3"
myst-parser = "^2.0.0"
sphinx = "^7.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
